<resources>
    <string name="app_name">BuySmart</string>
    <string name="usernameEditText">Username</string>
    <string name="emailEditText">E-mailadres</string>
    <string name="passwordTextField">Password</string>
    <string name="reEnterPasswordTextField">Re-enter password</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="firstNameEditText">First name</string>
    <string name="lastNameEditText">Last name</string>
    <string name="dateOfbirthEditText">Date of birth</string>
    <string name="phoneNumber1">Phone Number 1</string>
    <string name="phoneNumber2">Phone Number 2</string>
    <string name="nationality">Nationality</string>
    <string name="selectCountry">Select a country</string>
    <string name="logged_in_start_service">Logged in service channel</string>
    <string name="nav_home">Dashboard</string>
    <string name="nav_products">Products</string>
    <string name="nav_orders">My Orders</string>
    <string name="nav_deposit">Deposit</string>
    <string name="nav_withdraw">Withdraw</string>
    <string name="nav_logout">Logout</string>
    <string name="user_name">Username</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency">Currency</string>
    <string name="balance">Balance</string>
    <string name="require_password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="require_username">Enter Username</string>
    <string name="login_success">Login Successful</string>
    <string name="welcome_message">Welcome to BuySmart</string>
    <string name="welcome">Welcome</string>
    <string name="logged_in">" you are logged in."</string>
    <string name="error_login_message">Please enter a valid Username and Password</string>
    <string name="error_message">Invalid Username or Password \n \n please try again</string>
    <string name="require_re_password">Re-enter Password</string>
    <string name="require_nationality">Enter a Nationality</string>
    <string name="require_currency">Enter a Currency</string>
    <string name="require_balance">Enter a Balance</string>
    <string name="submit">Submit</string>
    <string name="error_internet">Please check your internet connection</string>
    <string name="json_error">Er is wat fout gegaan bij het parsen van de json data</string>
    <string name="error_message_name">Enter a username</string>
    <string name="error_message_nationality">Enter a nationality</string>
    <string name="error_message_currency">Enter a currency</string>
    <string name="error_message_balance">Enter a balance</string>
    <string name="error_message_password">Enter a password</string>
    <string name="error_message_re_password">Re-enter password</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="register_success">Registration was successful</string>
    <string name="registration_message">Proceed to the login screen by clicking Yes</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="logged_in_notifier">Logged In Notifier</string>
    <string name="require_phone1">Enter Phone number 1</string>
    <string name="require_phone2">Enter Phone number 2</string>
    <string name="require_email">Enter Email</string>
    <string name="require_firstname">Enter Firstname</string>
    <string name="require_lastname">Enter Lastname</string>
    <string name="error_message_first_name">Enter a firstname</string>
    <string name="error_message_last_name">Enter a lastname</string>
    <string name="error_message_email">Enter a valid email</string>
    <string name="error_message_phone1">Provide atleast one phone number</string>
    <string name="welcome_message_owner">Owner welcome to your shop<!--, your dashboard still needs to be made--></string>
    <string name="please_wait">Please wait</string>
    <string name="a_moment">We\'re setting up our shop...</string>
    <string name="nav_users">Manage users</string>
    <string name="nav_report">Orders report</string>
    <string name="error_message_users">There are no users \n \n in the database</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nav_manage_cred">Credentials</string>
    <string name="error_orders_list">There are no orders</string>
    <string name="product_name">Product name :</string>
    <string name="price_srd">Price : SRD</string>
    <string name="nav_manage_products">Manage products</string>
    <string name="error_insert_product">Vul alle velden in</string>
    <string name="error_phone_number">Please provide a  \n \n valid phone number</string>
    <string name="error_image">Please choose an image</string>
    <string name="error_numeric">Vul een nummerieke waarde \n \n in voor price</string>
    <string name="error_name_product">Vul een naam in \n \n voor het product</string>
    <string name="error_products">There are no products \n  \n available</string>
    <string name="error_orders_placed">Sorry this can not be deleted, because there are orders placed on this product</string>
</resources>