<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Username"
            android:editable="false"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="Deprecated" />

        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Password"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailEditText" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="E-mail"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstNameEditText" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Firstname"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastNameEditText" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Lastname"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nationality" />

        <EditText
            android:id="@+id/et_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Nationality"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/phonenumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber1" />

        <EditText
            android:id="@+id/et_phoneNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Phone number1"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/phonenumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber1" />

        <EditText
            android:id="@+id/et_phoneNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Phone number2"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:text="Save"
                android:textColor="@android:color/white"
                app:backgroundTint="#00BCD4"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#C5C5C5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>