<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_x="122dp"
        android:layout_y="47dp"
        android:src="@drawable/splashlogo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="15dp"
        android:layout_x="67dp"
        android:layout_y="332dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/require_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="15dp"
        android:layout_x="103dp"
        android:layout_y="422dp"
        android:background="@drawable/round_button"
        android:onClick="Submit"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/bt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"></Button>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="159dp"
        android:layout_x="103dp"
        android:layout_y="489dp"
        android:background="@drawable/round_button"
        android:onClick="Register"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="21dp"
        android:layout_x="65dp"
        android:layout_y="251dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/require_username"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
